Add documentation for create talk route
